k8s/articulos-webapp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: proyecto2

spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: caladdd/tracker:latest

        ports:
        - name: nodejs-port
          containerPort: 8083
      - name: api-nginx
        image: nginx:1.13.8
        ports:
        - name: http-port
          containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: webapp-nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
