k8s/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: articulos-webapp-svc
  namespace: proyecto2
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: articulos-webapp
  type: NodePort
